@@ -10,6 +10,8 @@ Version 1.3.beta2 (2011-??-??)
 - Added invisible hint to active step in checkout module (Ticket #331)
 - Added new rule product conditions to limit by product attribute
 - Added option to invert the rule condition (match/match not)
+- Added product list caching with intelligent self-configuration to display a "please wait" message only when necessary
+- Added caching tables to the maintenance cleaing options
 - Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
 - Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
 - Improved: new function generateRequestUrl to remove GET-parameters from request string
